<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hanling.mlibrary.LibMainActivity">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libmaintitle"/>
    <Button
        android:id="@+id/btn_one_mlib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_one" />

    <Button
        android:id="@+id/btn_two_mlib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_greendao" />

    <Button
        android:id="@+id/btn_three_mlib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_retrofit" />

    <Button
        android:id="@+id/btn_four_mlib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_other" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_other" />
</LinearLayout>
